src/objects/Survey__c.object
<CustomObject>
    <fields>
        <fullName>AccountLocation_City__c</fullName>
        <formula>Account_Location__r.Apttus_Config2__City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Location City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Location_Name__c</fullName>
        <formula>Account_Location__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Location Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Location</label>
        <referenceTo>Apttus_Config2__AccountLocation__c</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Achieve_common_goals_with_others__c</fullName>
        <label>I work with others to achieve goals</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adequate</fullName>
                </value>
                <value>
                    <fullName>Point of interest</fullName>
                </value>
                <value>
                    <fullName>Inadequate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Act_storagelevel_avg_working_capital__c</fullName>
        <label>Act. storagelevel avg. working capital</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Acts_properly_appearance_is_neatly__c</fullName>
        <label>Acts properly, appearance is neatly</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acts_with_a_positive_attitude__c</fullName>
        <label>I act open and positively during work</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adequate</fullName>
                </value>
                <value>
                    <fullName>Point of interest</fullName>
                </value>
                <value>
                    <fullName>Inadequate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Admin_Correct_method__c</fullName>
        <label>Admin: Correct method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agreements__c</fullName>
        <label>Agreements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Aims_for_high_cust_satisfaction_level__c</fullName>
        <label>I go for customer focus and satisfaction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adequate</fullName>
                </value>
                <value>
                    <fullName>Point of interest</fullName>
                </value>
                <value>
                    <fullName>Inadequate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Air_intake_cappucinomaker__c</fullName>
        <label>Air intake cappucinomaker</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>All_crosssell_items_available__c</fullName>
        <label>All cross-sell items available?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Allergy_Information__c</fullName>
        <label>Allergy Information</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Allergy_information_is_present_placed__c</fullName>
        <label>Allergy information is present / placed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Any_loose_ingredients_in_the_machine__c</fullName>
        <description>Are there any loose ingredients in the machine?</description>
        <inlineHelpText>Are there any loose ingredients in the machine? (Optional if Q3 is yes)</inlineHelpText>
        <label>Any loose ingredients in the machine?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PKL_YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_all_the_lights_onworking__c</fullName>
        <label>Are all the lights on/working?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_the_bean_hoppers_clean__c</fullName>
        <label>Are the bean hoppers clean?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_the_beans_used_the_correct_ones__c</fullName>
        <label>Are the beans used the correct ones?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_the_syrup_hoses_flowing_properly__c</fullName>
        <label>Are the syrup hoses flowing properly?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_there_coffee_beans_in_the_hoppers__c</fullName>
        <label>Are there coffee beans in the hoppers?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_there_cups_in_the_cup_dispensers__c</fullName>
        <label>Are there cups in the cup dispensers?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_there_enough_cross_sell_products__c</fullName>
        <label>Are there enough cross-sell products?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PKL_YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_there_enough_ingredients__c</fullName>
        <label>Are there enough ingredients?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PKL_YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Average_Score__c</fullName>
        <label>Average Score</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aware_of_all_rules_in_user_manual__c</fullName>
        <label>Aware of all rules in user manual</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Aware_of_first_aid_facilities__c</fullName>
        <label>Aware of first aid facilities</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Aware_of_local_regulations__c</fullName>
        <label>Aware of local regulations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Base_stand_cabinet_ingr_best_before__c</fullName>
        <label>Base stand cabinet ingr. best before</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Best_Before_instant_choc_sticksbag__c</fullName>
        <label>Best Before, instant choc (sticks&amp;bag)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Best_Before_instant_milk_sticksbag__c</fullName>
        <label>Best Before, instant milk (sticks&amp;bag)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Best_Before_instant_soup_sticksbag__c</fullName>
        <label>Best Before, instant soup (sticks&amp;bag)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Best_Before_instant_sugar_sticksbag__c</fullName>
        <label>Best Before, instant sugar (sticks&amp;bag)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Best_before_date1_coffee__c</fullName>
        <label>Best before date, coffee</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Best_before_date1_tea__c</fullName>
        <label>Best before date, tea</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Best_before_date_cacao__c</fullName>
        <label>Best before date cacao</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Best_before_date_cake_and_candy__c</fullName>
        <label>Best before date cake and candy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Best_before_date_coffee__c</fullName>
        <label>Best before date coffee</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Best_before_date_coffee_beans__c</fullName>
        <label>Best before date coffee beans</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Best_before_date_creamer__c</fullName>
        <label>Best before date creamer, milkpowder</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Best_before_date_cross_sell_milk_prod__c</fullName>
        <description>Do the cross sell and milk products meet the required best before date?</description>
        <inlineHelpText>Do the cross sell and milk products meet the required best before date?</inlineHelpText>
        <label>Best before date cross-sell &amp; milk prod</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PKL_YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Best_before_date_drum_10__c</fullName>
        <label>Best before date drum 10</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Best_before_date_drum_1__c</fullName>
        <label>Best before date drum 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Best_before_date_drum_2__c</fullName>
        <label>Best before date drum 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Best_before_date_ingredient__c</fullName>
        <label>Best before date, ingredient</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Best_before_date_ingredients_drawers__c</fullName>
        <label>Best before date ingredients drawers</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Best_before_date_instant_tea__c</fullName>
        <label>Best before date, instant tea</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Best_before_date_liquid_chocolate__c</fullName>
        <label>Best before date, liquid chocolate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Best_before_date_liquid_coffee__c</fullName>
        <label>Best before date, liquid coffee</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Best_before_date_liquid_milc__c</fullName>
        <label>Best before date, liquid milc</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Best_before_date_liquid_tea__c</fullName>
        <label>Best before date, liquid tea</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Best_before_date_milk__c</fullName>
        <label>Best before date milk</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Best_before_date_milkpowder__c</fullName>
        <label>Best before date milkpowder</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Best_before_date_of_the_syrups__c</fullName>
        <label>Best before date of the syrups</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Best_before_date_on_package_CMChocT__c</fullName>
        <label>Best before date on package C/M/Choc/T</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Best_before_date_products__c</fullName>
        <label>Best before date products</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Best_before_date_remaining_food_products__c</fullName>
        <label>Best before date remaining food products</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Best_before_date_softdrink__c</fullName>
        <label>Best before date softdrink, sirups</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Best_before_date_soup__c</fullName>
        <label>Best before date soup</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Best_before_date_tea__c</fullName>
        <label>Best before date tea</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Best_before_management_structure__c</fullName>
        <label>Best before management &amp; structure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Black_Coffee_Visual_appearance__c</fullName>
        <label>(Black) Coffee: Visual appearance?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Black_Coffee_Volume_of_drink_in_cup__c</fullName>
        <label>(Black) Coffee: Volume of drink in cup?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Blend_cards_present_and_well_placed__c</fullName>
        <label>Blend cards present and well placed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bottomplate__c</fullName>
        <label>Brewing Unit, Bottom plate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bottomplate_coffeebrewing_unit__c</fullName>
        <label>Bottomplate coffeebrewing unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brewingsystem__c</fullName>
        <label>Brewingsystem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business__c</fullName>
        <label>Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Discussed</fullName>
                </value>
                <value>
                    <fullName>Does not apply</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>